@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-06-27 17:53:53, took 00:12:36, with 60 workers, on 3440 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2024-06-27 18:33:31, took 00:16:54, with 60 workers, on 3440 cases, 1 failed, 0 traces, 9 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -482,7 +482,7 @@ http://sources.freertr.org/cfg/conn-xconn09.tst;conn-xconn09.tst;success;cross c
 http://sources.freertr.org/cfg/conn-xconn10.tst;conn-xconn10.tst;success;cross connect vlan subinterfaces of same interface
 http://sources.freertr.org/cfg/conn-xconn11.tst;conn-xconn11.tst;success;cross connect tunnel interfaces
 http://sources.freertr.org/cfg/conn-xconn12.tst;conn-xconn12.tst;success;cross connect different tunnel interfaces
-http://sources.freertr.org/cfg/conn-xotpad.tst;conn-xotpad.tst;success;xot pad
+http://sources.freertr.org/cfg/conn-xotpad.tst;conn-xotpad.tst;#6-run-r2 tping 100 5 1.1.1.1 vrf v1;xot pad
 http://sources.freertr.org/cfg/crypt-access01.tst;crypt-access01.tst;success;access class
 http://sources.freertr.org/cfg/crypt-access02.tst;crypt-access02.tst;success;access map
 http://sources.freertr.org/cfg/crypt-access03.tst;crypt-access03.tst;success;access policy
