@@ -478,7 +478,7 @@ qc pass: cross connect vlan subinterfaces
 qc pass: cross connect vlan subinterfaces of same interface
 qc pass: cross connect tunnel interfaces
 qc pass: cross connect different tunnel interfaces
-qc pass: xot pad
+failed: xot pad
 qc pass: access class
 qc pass: access map
 qc pass: access policy
@@ -3468,7 +3468,6 @@ todo: ctrl+l/r to try to redetect the screen resolution
 todo: some more autocolorizers under the same termial propertiles like terminal colorize mains subs etc
 todo: configure diff to have chance to change the sho config-differences
 todo: configure startup to have config committed but 4 now, only conf start tabbable stuffs
-todo: display asdfsdfas | asciinema <--- same as | pastebin....
 todo: server security to have settable tls version from client knob first
 todo: server security to log the transactions
 todo: server security to stick to the good protocols
