@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-27 17:53:53, took 00:12:36, with 60 workers, on 3440 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2024-06-27 18:33:31, took 00:16:54, with 60 workers, on 3440 cases, 1 failed, 0 traces, 9 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -499,7 +499,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn10.tst">conn-xconn10.tst</a></td><td>success</td><td>cross connect vlan subinterfaces of same interface</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn11.tst">conn-xconn11.tst</a></td><td>success</td><td>cross connect tunnel interfaces</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn12.tst">conn-xconn12.tst</a></td><td>success</td><td>cross connect different tunnel interfaces</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/conn-xotpad.tst">conn-xotpad.tst</a></td><td>success</td><td>xot pad</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-xotpad.tst">conn-xotpad.tst</a></td><td>#6-run-r2 tping 100 5 1.1.1.1 vrf v1</td><td>xot pad</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-access01.tst">crypt-access01.tst</a></td><td>success</td><td>access class</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-access02.tst">crypt-access02.tst</a></td><td>success</td><td>access map</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-access03.tst">crypt-access03.tst</a></td><td>success</td><td>access policy</td></tr>
