@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.27-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-27 18:04:43, took 00:10:32, with 60 workers, on 546 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-06-27 18:41:25, took 00:07:36, with 60 workers, on 546 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
